# jupyter-paywall

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_notebook.ipynb  premium_analysis.ipynb
src/: __init__.py  mainlayer_jupyter.py  paywall.py
tests/: test_magic.py
