[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-paywall"
version = "1.0.0"
description = "Jupyter notebook paywall extension powered by Mainlayer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["jupyter", "paywall", "mainlayer", "monetization", "notebook"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mainlayer>=1.0.0",
  "ipython>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.0",
  "jupyter>=1.0.0",
  "nbformat>=5.0",
]

[project.entry-points."jupyter_nbextensions_configurator"]
mainlayer_jupyter = "src.mainlayer_jupyter:load_ipython_extension"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
